fix nav padding + hide scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,21 @@
 
 :root {
     --mainGreen: #5fbd68;
+
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+
+    background-color: #181818;
+    font-size: 16px;
+    overflow-x: hidden;
+}
+
+:root::-webkit-scrollbar {
+    display: none;
 }
 
 * {
     box-sizing: border-box;
-}
-
-html {
-    background-color: #181818;
-    font-size: 16px;
 }
 
 
@@ -45,21 +51,23 @@ a {
 
 /* HEADER */
 
-/* -------------------------- Header Section -------------------------- */
-
 header {
     width: 100vw;
     height: 10vh;
+    min-height: 5rem;
 }
+
+
+/* -------------------------- Header Section -------------------------- */
 
 nav {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     width: 100%;
     height: 10vh;
-    min-height: 90px;
-    padding: 2rem 4rem;
+    min-height: 5rem;
+    padding: 4rem 5rem 0 5rem;
 }
 
 
@@ -94,6 +102,7 @@ main {
     width: 100vw;
     height: 100vh;
 }
+
 
 /* -------------------------- Hero Section -------------------------- */
 
